--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Details.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Details.cshtml
@@ -1,43 +1,43 @@
-﻿@page
+﻿@page "{id:int}"
 @model SpartaProjectWebApp.Pages.Products.DetailsModel
 
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Product</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Price)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Price)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Url)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Url)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.AverageRating)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.AverageRating)
-        </dd>
-    </dl>
+	<h4>Product</h4>
+	<hr />
+	<dl class="row">
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Product.Name)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Product.Name)
+		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Product.Price)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Product.Price)
+		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Product.Url)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Product.Url)
+		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Product.AverageRating)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Product.AverageRating)
+		</dd>
+	</dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Product.ProductId">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+	<a asp-page="./Edit" asp-route-id="@Model.Product.ProductId">Edit</a> |
+	<a asp-page="./Index">Back to List</a>
 </div>
