--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Edit.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Edit.cshtml
@@ -1,8 +1,8 @@
-﻿@page
+﻿@page "{id:int}"
 @model SpartaProjectWebApp.Pages.Products.EditModel
 
 @{
-    ViewData["Title"] = "Edit";
+	ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
@@ -10,41 +10,41 @@
 <h4>Product</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Product.ProductId" />
-            <div class="form-group">
-                <label asp-for="Product.Name" class="control-label"></label>
-                <input asp-for="Product.Name" class="form-control" />
-                <span asp-validation-for="Product.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.Price" class="control-label"></label>
-                <input asp-for="Product.Price" class="form-control" />
-                <span asp-validation-for="Product.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.Url" class="control-label"></label>
-                <input asp-for="Product.Url" class="form-control" />
-                <span asp-validation-for="Product.Url" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.AverageRating" class="control-label"></label>
-                <input asp-for="Product.AverageRating" class="form-control" />
-                <span asp-validation-for="Product.AverageRating" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form method="post">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<input type="hidden" asp-for="Product.ProductId" />
+			<div class="form-group">
+				<label asp-for="Product.Name" class="control-label"></label>
+				<input asp-for="Product.Name" class="form-control" />
+				<span asp-validation-for="Product.Name" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Product.Price" class="control-label"></label>
+				<input asp-for="Product.Price" class="form-control" />
+				<span asp-validation-for="Product.Price" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Product.Url" class="control-label"></label>
+				<input asp-for="Product.Url" class="form-control" />
+				<span asp-validation-for="Product.Url" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Product.AverageRating" class="control-label"></label>
+				<input asp-for="Product.AverageRating" class="form-control" />
+				<span asp-validation-for="Product.AverageRating" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Save" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+	<a asp-page="./Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
