--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Delete.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Delete.cshtml
@@ -36,6 +36,12 @@
 		<dd class="col-sm-10">
 			@Html.DisplayFor(model => model.Product.AverageRating)
 		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Product.Category)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Product.Category)
+		</dd>
 	</dl>
 
 	<form method="post">
