--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Details.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Details.cshtml
@@ -35,6 +35,12 @@
 		<dd class="col-sm-10">
 			@Html.DisplayFor(model => model.Product.AverageRating)
 		</dd>
+		<dt class="col-sm-2">
+			@Html.DisplayNameFor(model => model.Product.Category)
+		</dt>
+		<dd class="col-sm-10">
+			@Html.DisplayFor(model => model.Product.Category)
+		</dd>
 	</dl>
 </div>
 <div>
