--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Index.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Index.cshtml
@@ -4,6 +4,11 @@
 @{
     ViewData["Title"] = "Index";
 }
+<style>
+	tr:nth-child(even) {
+		background-color: #f2f2f2;
+	}
+</style>
 
 <h1>Index</h1>
 
@@ -18,43 +23,49 @@
 </form>
 <table class="table">
     <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].Name)
-            </th>
-            <th>
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Product[0].AverageRating)
-            </th>
-            <th></th>
-        </tr>
+		<tr>
+			<th>
+				@Html.DisplayNameFor(model => model.Product[0].Name)
+			</th>
+			<th>
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Product[0].Price)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Product[0].AverageRating)
+			</th>
+			<th>
+				@Html.DisplayNameFor(model => model.Product[0].Category)
+			</th>
+			<th></th>
+		</tr>
     </thead>
     <tbody>
 @foreach (var item in Model.Product) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
+		<tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Name)
+			</td>
 			<td>
 				<img src="@Html.DisplayFor(modelItem => item.Url)" alt="Product Image" style="width:5vw;">
-				
+
 			</td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AverageRating)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ProductId">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ProductId">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ProductId">Delete</a>
-            </td>
-        </tr>
+			<td>
+				@Html.DisplayFor(modelItem => item.Price)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.AverageRating)
+			</td>
+			<td>
+				@Html.DisplayFor(modelItem => item.Category)
+			</td>
+			<td>
+				<a asp-page="./Edit" asp-route-id="@item.ProductId">Edit</a> |
+				<a asp-page="./Details" asp-route-id="@item.ProductId">Details</a> |
+				<a asp-page="./Delete" asp-route-id="@item.ProductId">Delete</a>
+			</td>
+		</tr>
 }
     </tbody>
 </table>
