--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Index.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Index.cshtml
@@ -17,6 +17,9 @@
 </p>
 <form>
 	<p>
+		<select asp-for="ProductCategory" asp-items="Model.Categories">
+			<option value="">All</option>
+		</select>
 		Title: <input type="text" asp-for="SearchString" />
 		<input type="submit" value="Filter" />
 	</p>
