--- a/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Details.cshtml
+++ b/SpartaProjectWebApp/SpartaProjectWebApp/Pages/Products/Details.cshtml
@@ -44,6 +44,35 @@
 	</dl>
 </div>
 <div>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>
+					Comment
+				</th>
+				<th>
+				</th>
+				<th>
+					Rating
+				</th>
+			</tr>
+		</thead>
+		<tbody> 
+			@foreach (var item in Model.Product.Reviews)
+			{
+				<tr>
+					<td>
+						@Html.DisplayFor(modelItem => item.Comment)
+					</td>
+					<td>
+						@Html.DisplayFor(modelItem => item.Rating)
+					</td>
+				</tr>
+			}
+		</tbody>
+	</table>
+</div>
+<div>
 	<a asp-page="./Edit" asp-route-id="@Model.Product.ProductId">Edit</a> |
 	<a asp-page="./Index">Back to List</a>
 </div>
